Prepocessing Player Salary for year 2018-19

--- a/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
+++ b/Pre-processing/preprocessing_data/explore_data_salary_2016_19.ipynb
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2947c27",
+   "id": "d9da7f2d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "14274bbb",
+   "id": "906f50bd",
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b2cccf44",
+   "id": "c1fb5ff2",
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2413,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "eabac272",
+   "id": "513ee687",
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2465,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c587459f",
+   "id": "7345e4ba",
    "metadata": {},
    "outputs": [
     {
@@ -2564,7 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bd807e23",
+   "id": "5156e563",
    "metadata": {},
    "outputs": [
     {
@@ -2696,7 +2696,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b553006f",
+   "id": "c926d025",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "898fded2",
+   "id": "157361e2",
    "metadata": {},
    "outputs": [
     {
@@ -2972,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "36f1b42c",
+   "id": "3e94daf8",
    "metadata": {},
    "outputs": [
     {
@@ -3116,7 +3116,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "dfb56f78",
+   "id": "747fb706",
    "metadata": {},
    "outputs": [
     {
@@ -3261,7 +3261,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "a75cfcec",
+   "id": "db0d94f9",
    "metadata": {},
    "outputs": [
     {
@@ -3393,7 +3393,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "4213ea66",
+   "id": "035facd9",
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6a8431",
+   "id": "74a6c7de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3536,7 +3536,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "93cccfda",
+   "id": "d64e1bc8",
    "metadata": {},
    "outputs": [
     {
@@ -3731,8 +3731,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "id": "70e8a502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhanaprakashdurairaj/opt/anaconda3/envs/mlenv/lib/python3.7/site-packages/ipykernel_launcher.py:26: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/Users/dhanaprakashdurairaj/opt/anaconda3/envs/mlenv/lib/python3.7/site-packages/pandas/core/frame.py:3191: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>playing_season</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>gordoaa01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>21590909.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>935</th>\n",
+       "      <td>holidaa01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1914480.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>936</th>\n",
+       "      <td>naderab01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1378242.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>937</th>\n",
+       "      <td>aminual01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>6957105.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>938</th>\n",
+       "      <td>horfoal01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>28928710.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1403</th>\n",
+       "      <td>colliza01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>3628920.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1404</th>\n",
+       "      <td>lavinza01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>19500000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1405</th>\n",
+       "      <td>loftoza01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>77250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1406</th>\n",
+       "      <td>pachuza01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2393887.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1407</th>\n",
+       "      <td>smithzh01</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2615160.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>474 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      player_id playing_season      salary\n",
+       "934   gordoaa01           2018  21590909.0\n",
+       "935   holidaa01           2018   1914480.0\n",
+       "936   naderab01           2018   1378242.0\n",
+       "937   aminual01           2018   6957105.0\n",
+       "938   horfoal01           2018  28928710.0\n",
+       "...         ...            ...         ...\n",
+       "1403  colliza01           2018   3628920.0\n",
+       "1404  lavinza01           2018  19500000.0\n",
+       "1405  loftoza01           2018     77250.0\n",
+       "1406  pachuza01           2018   2393887.0\n",
+       "1407  smithzh01           2018   2615160.0\n",
+       "\n",
+       "[474 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#THE FOLLOWING SECTION is creating a Dataframe for 2018-19\n",
+    "player_salary_2018_19_df = player_salary_2016_to_2019_df.loc[(player_salary_2016_to_2019_df['Season'] == \"2018-19\")]\n",
+    "player_salary_2018_19_df\n",
+    "\n",
+    "# Way to find frequency of player_ID\n",
+    "duplicate_name_2_df = player_salary_2018_19_df['Player_ID'].value_counts()\n",
+    "duplicate_name_2_df\n",
+    "\n",
+    "# Number of players who are traded (and have multiple rows)\n",
+    "duplicate_name_2_df.loc[(duplicate_name_2_df > 1)].count()\n",
+    "\n",
+    "# Duplicate count is 0. To confirm whether a player was in two teams\n",
+    "player_salary_2018_19_df['Tm'].value_counts()\n",
+    "\n",
+    "player_salary_2018_19_df.loc[(player_salary_2018_19_df['Player_ID'] == \"acyqu01\")]\n",
+    "\n",
+    "# Creating New Data Frame for 2018-19 with just the columns we need \n",
+    "player_salary_201819_clean_df = player_salary_2018_19_df[['Player_ID','Season','Salary']]\n",
+    "player_salary_201819_clean_df\n",
+    "\n",
+    "# Change format of Season from 2018-19 to 2018\n",
+    "split_season_df = player_salary_201819_clean_df['Season'].str.split(\"-\", n = 1, expand = True)\n",
+    "split_season_df\n",
+    "\n",
+    "# Add New Column for playing_season\n",
+    "player_salary_201819_clean_df[\"playing_season\"] = split_season_df[0]\n",
+    "player_salary_201819_clean_df\n",
+    "\n",
+    "# Fill Salary Values with 0 if its null\n",
+    "player_salary_201819_clean_df[['Salary']] = player_salary_201819_clean_df[['Salary']].fillna(value=0)\n",
+    "player_salary_201819_clean_df\n",
+    "\n",
+    "# Change Column Names \n",
+    "player_salary_201819_clean_df = player_salary_201819_clean_df.rename(columns={\"Player_ID\":\"player_id\"})\n",
+    "player_salary_201819_clean_df = player_salary_201819_clean_df.rename(columns={\"Salary\":\"salary\"})\n",
+    "player_salary_201819_clean_df\n",
+    "\n",
+    "\n",
+    "# Create a Cleaned Data Frame that will be ouputted to a CSV file\n",
+    "player_salary_201819_cleaned_df = player_salary_201819_clean_df[['player_id','playing_season','salary']]\n",
+    "player_salary_201819_cleaned_df\n",
+    "\n",
+    "#########################\n",
+    "# Write to CSV File 2016\n",
+    "#########################\n",
+    "# writing Clean data to csv file\n",
+    "player_salary_201819_cleaned_df.to_csv(r'../../Resources/PreprocessedDataFiles/NBA Players Salary 201819_clean.csv', encoding='utf-8', header='true')\n",
+    "player_salary_201819_cleaned_df\n",
+    "\n",
+    "#count 474 matches with previous calculations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "06699250",
+   "id": "1a38a165",
    "metadata": {},
    "outputs": [],
    "source": []
