Updated with slides for Deliverable-2nd week presentations

--- a/ML-Models/Untitled.ipynb
+++ b/ML-Models/Untitled.ipynb
@@ -3,23 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f8c928d",
+   "id": "40749e51",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initial imports\n",
     "import pandas as pd\n",
+    "#import hvplot.pandas\n",
     "from path import Path\n",
-    "\n",
-    "\n",
-    "\n",
-    "from imblearn.ensemble import BalancedRandomForestClassifier"
+    "#import plotly.express as px\n",
+    "#from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "#from sklearn.decomposition import PCA\n",
+    "#from sklearn.cluster import KMeans\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7cfceca4",
+   "id": "fee9c1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de4d108e",
+   "id": "a79129be",
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a84818ac",
+   "id": "0ddd4779",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "04e43416",
+   "id": "552b797f",
    "metadata": {},
    "outputs": [
     {
@@ -954,20 +956,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c11b895a",
+   "id": "1251bf5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def salary_increased_or_not_labeling(player_id):\n",
+    "    print ('coming inside function')\n",
     "    player_first_year_salary = players_salaries_df[(players_salaries_df['player_id'] == player_id) & \\\n",
     "                                              (players_salaries_df['playing_season'] == '2016-2017')]['player_salary'].values\n",
     "    \n",
     "     \n",
-    "      \n",
+    "    #print(f'{player_id}\\'s first year salary', player_first_year_salary)\n",
+    "    \n",
+    "    \n",
     "    player_last_year_salary = players_salaries_df[(players_salaries_df['player_id'] == player_id) & \\\n",
     "                                              (players_salaries_df['playing_season'] == '2017-2018')]['player_salary'].values\n",
     "\n",
-    "      \n",
+    "    #print(f'{player_id}\\'s last year salary', player_last_year_salary)\n",
+    "\n",
+    "    \n",
     "    if player_last_year_salary > player_first_year_salary:\n",
     "        return 1\n",
     "    else:\n",
@@ -977,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b82c2837",
+   "id": "a013ee33",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "737916bb",
+   "id": "d0714240",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "780cfaf9",
+   "id": "d9d48898",
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1791,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3787f368",
+   "id": "09c4497c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d75ade75",
+   "id": "cfee9194",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9bb207ff",
+   "id": "8b82da53",
    "metadata": {},
    "outputs": [
     {
@@ -1907,8 +1914,8 @@
     }
    ],
    "source": [
-    "# Apply random firest \n",
     "\n",
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
     "clf = BalancedRandomForestClassifier(n_estimators=100,max_depth=None, random_state=1)\n",
     "clf.fit(X_train, y_train)  \n",
     "\n",
@@ -1919,7 +1926,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cd276a89",
+   "id": "5b33f6d3",
    "metadata": {},
    "outputs": [
     {
@@ -1935,6 +1942,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
+    "# YOUR CODE HERE\n",
+    "\n",
     "\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "balanced_accuracy_score(y_test, y_pred)"
@@ -1943,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2d9f5ee1",
+   "id": "44d5a299",
    "metadata": {},
    "outputs": [
     {
@@ -1960,6 +1969,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
+    "# YOUR CODE HERE\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "confusion_matrix(y_test, y_pred)"
@@ -1968,7 +1978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51cc7cf3",
+   "id": "2f794d1c",
    "metadata": {},
    "outputs": [],
    "source": []
