--- a/Pre-processing/preprocessing_data/cleanup_data_salary_2016_19.ipynb
+++ b/Pre-processing/preprocessing_data/cleanup_data_salary_2016_19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "450ab203",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "806dfb47",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "b03a6df1",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Pre-processing/preprocessing_data'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "beb0ca45",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "d29ba2a3",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "9b1ee00c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "1b095101",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "[1408 rows x 45 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5c5ab53f",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "ae6510e2",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "1453949b",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "c7e32371",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
        "[8 rows x 36 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "e171dc23",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "128e8a21",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
        "1408"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "a10a66d2",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "660"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "00b5eb74",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "47e4a1cb",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1274,7 @@
        "Name: Season, Length: 1408, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "27ecaac3",
    "metadata": {},
    "outputs": [
@@ -1393,7 +1393,7 @@
        "[1408 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "d63f5370",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1752,7 @@
        "[436 rows x 45 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "3332f7e6",
    "metadata": {},
    "outputs": [
@@ -1818,7 +1818,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "5ba5da94",
    "metadata": {},
    "outputs": [
@@ -1850,7 +1850,7 @@
        "Name: Player_ID, Length: 436, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "91485330",
    "metadata": {},
    "outputs": [
@@ -1871,7 +1871,7 @@
        "436"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "25a8adde",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1892,7 @@
        "436"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "0a0d736b",
    "metadata": {},
    "outputs": [
@@ -1913,7 +1913,7 @@
        "498"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "89d6e45e",
    "metadata": {},
    "outputs": [
@@ -1934,7 +1934,7 @@
        "498"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "1a9c1f3c",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1955,7 @@
        "474"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "ac5b71d0",
    "metadata": {},
    "outputs": [
@@ -1976,7 +1976,7 @@
        "474"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "159f8957",
    "metadata": {},
    "outputs": [
@@ -2343,7 +2343,7 @@
        "[436 rows x 45 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,28 +2356,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "5811c996",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "teaguje01    1\n",
-       "bookede01    1\n",
-       "chrisse01    1\n",
-       "lopezro01    1\n",
-       "dellama01    1\n",
+       "ingrabr01    1\n",
+       "dinwisp01    1\n",
+       "speigma01    1\n",
+       "martija01    1\n",
+       "onuakch01    1\n",
        "            ..\n",
-       "murrade01    1\n",
-       "johnsam01    1\n",
-       "smithis01    1\n",
-       "conlemi01    1\n",
-       "johnsja01    1\n",
+       "davisde01    1\n",
+       "vonleno01    1\n",
+       "goberru01    1\n",
+       "scottmi01    1\n",
+       "onuakar01    1\n",
        "Name: Player_ID, Length: 436, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "id": "a94cf553",
    "metadata": {},
    "outputs": [
@@ -2400,7 +2400,7 @@
        "0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2412,47 +2412,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "2e19b2b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "DEN    16\n",
+       "WAS    16\n",
        "MIL    16\n",
        "GSW    16\n",
-       "WAS    16\n",
-       "TOR    16\n",
-       "DEN    16\n",
        "CLE    16\n",
+       "TOR    16\n",
+       "ATL    15\n",
+       "LAC    15\n",
+       "BRK    15\n",
        "IND    15\n",
        "DET    15\n",
-       "UTA    15\n",
-       "ATL    15\n",
-       "BRK    15\n",
        "MIN    15\n",
-       "ORL    15\n",
-       "CHI    15\n",
        "BOS    15\n",
-       "LAC    15\n",
+       "ORL    15\n",
+       "UTA    15\n",
        "SAC    15\n",
-       "MEM    14\n",
-       "NYK    14\n",
-       "POR    14\n",
+       "CHI    15\n",
+       "DAL    14\n",
+       "PHO    14\n",
        "OKC    14\n",
        "SAS    14\n",
        "LAL    14\n",
-       "DAL    14\n",
-       "PHO    14\n",
-       "PHI    13\n",
+       "NYK    14\n",
+       "POR    14\n",
+       "MEM    14\n",
        "CHO    13\n",
+       "PHI    13\n",
        "MIA    13\n",
        "HOU    13\n",
        "NOP    11\n",
        "Name: Tm, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "id": "43a73048",
    "metadata": {},
    "outputs": [
@@ -2552,7 +2552,7 @@
        "[1 rows x 45 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2563,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "id": "33483b6c",
    "metadata": {},
    "outputs": [
@@ -2682,7 +2682,7 @@
        "[436 rows x 3 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2695,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "id": "5c5ca017",
    "metadata": {},
    "outputs": [
@@ -2802,7 +2802,7 @@
        "[436 rows x 2 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "id": "12a02b9b",
    "metadata": {},
    "outputs": [
@@ -2958,7 +2958,7 @@
        "[436 rows x 4 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2971,10 +2971,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "id": "413b0355",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhanaprakashdurairaj/opt/anaconda3/envs/mlenv/lib/python3.7/site-packages/pandas/core/frame.py:3191: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3102,7 +3114,7 @@
        "[436 rows x 4 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3115,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "a020d04e",
    "metadata": {},
    "outputs": [
@@ -3246,7 +3258,7 @@
        "[436 rows x 4 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3260,7 +3272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 37,
    "id": "2e5193f6",
    "metadata": {},
    "outputs": [
@@ -3379,7 +3391,7 @@
        "[436 rows x 3 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3392,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "id": "a6a98e13",
    "metadata": {},
    "outputs": [
@@ -3511,7 +3523,7 @@
        "[436 rows x 3 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3535,7 +3547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "id": "203ce8e5",
    "metadata": {},
    "outputs": [
@@ -3671,7 +3683,7 @@
        "[498 rows x 3 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3720,7 +3732,7 @@
     "player_salary_201718_cleaned_df\n",
     "\n",
     "#########################\n",
-    "# Write to CSV File 2016\n",
+    "# Write to CSV File 2017\n",
     "#########################\n",
     "# writing Clean data to csv file\n",
     "player_salary_201718_cleaned_df.to_csv(r'../../Resources/PreprocessedDataFiles/NBA Players Salary 201718_clean.csv', encoding='utf-8', header='true')\n",
@@ -3731,7 +3743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "id": "544fe6b9",
    "metadata": {},
    "outputs": [
@@ -3867,7 +3879,7 @@
        "[474 rows x 3 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3928,7 @@
     "player_salary_201819_cleaned_df\n",
     "\n",
     "#########################\n",
-    "# Write to CSV File 2016\n",
+    "# Write to CSV File 2018\n",
     "#########################\n",
     "# writing Clean data to csv file\n",
     "player_salary_201819_cleaned_df.to_csv(r'../../Resources/PreprocessedDataFiles/NBA Players Salary 201819_clean.csv', encoding='utf-8', header='true')\n",
