Fix Salary Generation 2019-20. Column order was incorrect. swap playing season and salary

--- a/Pre-processing/preprocessing_data/ReadCombinedCSV.ipynb
+++ b/Pre-processing/preprocessing_data/ReadCombinedCSV.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1a0e0b77",
+   "execution_count": 14,
+   "id": "8e3576d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "42a074b3",
+   "execution_count": 15,
+   "id": "ce8f27f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "12820aa4",
+   "execution_count": 16,
+   "id": "567d406e",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "'/Users/dhanaprakashdurairaj/Documents/GitHub/nba-player-analytics/Pre-processing/preprocessing_data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d0933f5c",
+   "execution_count": 17,
+   "id": "310a8b43",
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9ff41089",
+   "execution_count": 18,
+   "id": "f3659c34",
    "metadata": {},
    "outputs": [
     {
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "67f3ca76",
+   "execution_count": 19,
+   "id": "dd07a737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c40d84d3",
+   "execution_count": 20,
+   "id": "d72fe265",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "[2085 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,8 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8686a065",
+   "execution_count": 21,
+   "id": "a6e0fb4b",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>hammoaj01</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -549,7 +549,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>brookaa01</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "      <td>2700000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -557,7 +557,7 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>gordoaa01</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "      <td>4351320.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -565,7 +565,7 @@
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>paynead01</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "      <td>2022240.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -573,7 +573,7 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>aminual01</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "      <td>7680965.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -589,40 +589,40 @@
        "      <td>521</td>\n",
        "      <td>521</td>\n",
        "      <td>youngtr01</td>\n",
+       "      <td>2019</td>\n",
        "      <td>6273000.0</td>\n",
-       "      <td>2019.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1930</th>\n",
        "      <td>522</td>\n",
        "      <td>522</td>\n",
        "      <td>zelleco01</td>\n",
+       "      <td>2019</td>\n",
        "      <td>14471910.0</td>\n",
-       "      <td>2019.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1931</th>\n",
        "      <td>523</td>\n",
        "      <td>523</td>\n",
        "      <td>zellety01</td>\n",
+       "      <td>2019</td>\n",
        "      <td>245686.0</td>\n",
-       "      <td>2019.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1932</th>\n",
        "      <td>524</td>\n",
        "      <td>524</td>\n",
        "      <td>zizican01</td>\n",
+       "      <td>2019</td>\n",
        "      <td>2281800.0</td>\n",
-       "      <td>2019.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1933</th>\n",
        "      <td>525</td>\n",
        "      <td>525</td>\n",
        "      <td>zubaciv01</td>\n",
+       "      <td>2019</td>\n",
        "      <td>6481482.0</td>\n",
-       "      <td>2019.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -630,23 +630,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0  Unnamed: 0.1  player_id  playing_season     salary\n",
-       "0              0             0  hammoaj01          2016.0        0.0\n",
-       "1              1             1  brookaa01          2016.0  2700000.0\n",
-       "2              2             2  gordoaa01          2016.0  4351320.0\n",
-       "3              3             3  paynead01          2016.0  2022240.0\n",
-       "4              4             4  aminual01          2016.0  7680965.0\n",
-       "...          ...           ...        ...             ...        ...\n",
-       "1929         521           521  youngtr01       6273000.0     2019.0\n",
-       "1930         522           522  zelleco01      14471910.0     2019.0\n",
-       "1931         523           523  zellety01        245686.0     2019.0\n",
-       "1932         524           524  zizican01       2281800.0     2019.0\n",
-       "1933         525           525  zubaciv01       6481482.0     2019.0\n",
+       "      Unnamed: 0  Unnamed: 0.1  player_id  playing_season      salary\n",
+       "0              0             0  hammoaj01            2016         0.0\n",
+       "1              1             1  brookaa01            2016   2700000.0\n",
+       "2              2             2  gordoaa01            2016   4351320.0\n",
+       "3              3             3  paynead01            2016   2022240.0\n",
+       "4              4             4  aminual01            2016   7680965.0\n",
+       "...          ...           ...        ...             ...         ...\n",
+       "1929         521           521  youngtr01            2019   6273000.0\n",
+       "1930         522           522  zelleco01            2019  14471910.0\n",
+       "1931         523           523  zellety01            2019    245686.0\n",
+       "1932         524           524  zizican01            2019   2281800.0\n",
+       "1933         525           525  zubaciv01            2019   6481482.0\n",
        "\n",
        "[1934 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,8 +658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "80e0a6a0",
+   "execution_count": 22,
+   "id": "ca9cbdef",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "Name: player_id, Length: 864, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00756082",
+   "id": "5db0fb16",
    "metadata": {},
    "outputs": [],
    "source": []
